--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CodingHouse Template</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+ <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+ <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-
+  <body ng-app="team-tweet">
+    <div class="container">
+      <div class="row">
+        <ul class="nav nav-tabs center">
+          <li role="presentation"><a href="#/">Tweet Zone</a></li>
+          <li role="presentation"><a href="#/addUser">Authorized Accounts</a></li>
+        </ul>
+      </div>
+      <!-- MAIN CONTENT AND INJECTED VIEWS -->
+        <div id="main">
+             
+            <!-- angular templating -->
+            <!-- this is where content will be injected -->
+          <div ng-view></div>
+        </div>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
